# media-application-prototype

./: Cargo.toml  README.md
db/migrations/: 20230905204116_users.sql
src/: appstate.rs  config.rs  database.rs  error.rs  main.rs  prelude.rs
src/middlewares/: authorization.rs  mod.rs
src/routes/: mod.rs
src/routes/admin/: mod.rs
src/routes/admin/users/: get.rs  mod.rs
src/routes/auth/: login.rs  mod.rs  register.rs
src/routes/exam/: add_grade.rs  create.rs  edit.rs  edit_grades.rs  get.rs  get_grades.rs  mod.rs  remove_grade.rs
src/routes/exams/: create.rs  edit.rs  get.rs  mod.rs
src/routes/exams/grades/: add.rs  delete.rs  edit.rs  get.rs  mod.rs
src/routes/user/: get.rs  get_users.rs  mod.rs
src/structures/: base.rs  exam.rs  grade.rs  mod.rs  session.rs  user.rs
src/utils/: mod.rs  snowflake.rs
src/utils/macros/: config.rs
