[package]
name = "rs-api-temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "0.10.0"
async-trait = "0.1.56"
anyhow = "1.0.75"
nanoid = "0.4.0"
rs-snowflake = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
serde_with = { version = "1.14.0", features = ["json"] }
